# embedded_languages

./: Cargo.toml  README.md
examples/: boa.rs  deno.rs  javascriptcore.rs  lua.rs  quickjs.rs  rhai.rs  starlark.rs
src/: boa.rs  deno.rs  javascriptcore.rs  lib.rs  logger.js  lua.rs  quickjs.rs  rhai.rs  starlark.rs
