[package]
name = "embedded_languages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_runtime = "0.115.0"
mlua = { version = "0.8", features = ["luau", "vendored"] }
# starlark = "0.8.0"
starlark = { git = "https://github.com/facebookexperimental/starlark-rust", rev = "7614e40fefc7e5c65430634b85aae9a6fb3c7021" }
tokio = {version = "1", features = ["full"], optional = true}

[[example]]
name = "deno"
required-features = ["tokio"]
