[package]
name = "embedded_languages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
boa_engine = "0.17.0"
boa_gc = "0.17.0"
gc = "0.5.0"
# deno_core = "*"
# deno_runtime = "0.115.0"
log = "*"
mlua = { version = "0.8", features = ["luau", "vendored"] }
pretty_env_logger = "*"
rhai = { version = "1.14.0", features = ["serde"] }
rquickjs = "0.3.1"
serde_json = "1.0.96"
# starlark = "0.8.0"
starlark = { git = "https://github.com/facebookexperimental/starlark-rust", rev = "7614e40fefc7e5c65430634b85aae9a6fb3c7021" }
tokio = {version = "1", features = ["full"], optional = true}

[[example]]
name = "deno"
required-features = ["tokio"]

[target.'cfg(unix)'.dependencies]
rusty_jsc = "0.1.0"
